# play

./: .gitignore  CMakeLists.txt  Enum.h  LICENSE  README.md  conanfile.txt  main.cpp  sonar-project.properties
.github/workflows/: cmake.yml  codeql-analysis.yml  sonarcloud.yml
